<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2014 Sigmalab
  ~
  ~ Sigmalab Scrappy licenses this file to you under the GPLv3 license,
  
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.sigmalab</groupId>
  <artifactId>scrappy</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Quick Scraper Pdf</name>
  <description>Progetto di test per uno scraper pdf</description>
  <url>http://</url>

  <organization>
    <name>Sigmalab</name>
    <url>http://sigmalab.net/</url>
  </organization>

  <licenses>
    <license>
      <name>GPLv3</name>
      <url></url>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/yoghi/scrappy.git</url>
    <connection>scm:git:git://github.com/yoghi/scrappy.git</connection>
    <developerConnection>scm:git:git@github.com:yoghi/scrappy.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>yoghi</id>
      <name>Stefano Tamagnini</name>
      <email>yoghi@sigmalab.net</email>
      <url>http://sigmalab.net/</url>
      <organization>Sigmalab</organization>
      <organizationUrl>http://sigmalab.net</organizationUrl>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>US-ASCII</project.build.sourceEncoding>
    <project.reporting.outputEncoding>US-ASCII</project.reporting.outputEncoding>
    <test.jvm.argLine>
      -XX:+AggressiveOpts
      -XX:+TieredCompilation
      -XX:+UseBiasedLocking
      -XX:+UseFastAccessorMethods
      -XX:+UseStringCache
      -XX:+OptimizeStringConcat
      -XX:+HeapDumpOnOutOfMemoryError
    </test.jvm.argLine>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>1.8.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-core</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-parsers</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.2</version>
    </dependency>

    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>2.3</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>false</downloadJavadocs> 
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <compilerVersion>1.7</compilerVersion>
          <fork>true</fork>
          <source>1.7</source>
        <target>1.7</target>
        <debug>true</debug>
        <optimize>true</optimize>
        <showDeprecation>true</showDeprecation>
        <showWarnings>true</showWarnings>
        <compilerArgument>-Xlint:-options</compilerArgument>
        <!-- XXX: maven-release-plugin complains - MRELEASE-715 -->
        <!--
            <compilerArguments>
        <Xlint:-options />
        <Xlint:unchecked />
        <Xlint:deprecation />
      </compilerArguments>
      -->
      <meminitial>256m</meminitial>
      <maxmem>1024m</maxmem>
    </configuration>
  </plugin>

  <plugin>
    <artifactId>maven-assembly-plugin</artifactId>
    <configuration>
      <archive>
        <manifest>
          <mainClass>net.sigmalab.scrappy.Main</mainClass>
        </manifest>
      </archive>
      <descriptorRefs>
        <descriptorRef>jar-with-dependencies</descriptorRef>
      </descriptorRefs>
    </configuration>
    <executions>
      <execution>
        <id>make-assembly</id>
        <!-- this is used for inheritance merges -->
        <phase>package</phase>
        <!-- bind to the packaging phase -->
        <goals>
          <goal>single</goal>
        </goals>
      </execution>
    </executions>
  </plugin>

  <plugin>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>2.16</version>
    <configuration>
      <includes>
        <include>**/*Test*.java</include>
        <include>**/*Benchmark*.java</include>
      </includes>
      <excludes>
        <exclude>**/Abstract*</exclude>
        <exclude>**/TestUtil*</exclude>
      </excludes>
      <runOrder>random</runOrder>
      <argLine>${test.jvm.argLine}</argLine>
    </configuration>
  </plugin>

  <plugin>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.9.1</version>
    <configuration>
      <detectOfflineLinks>false</detectOfflineLinks>
      <breakiterator>true</breakiterator>
    <version>false</version>
    <author>false</author>
    <keywords>true</keywords>
  </configuration>
</plugin>

<plugin>
  <artifactId>maven-release-plugin</artifactId>
  <version>2.4.2</version>
  <configuration>
    <useReleaseProfile>false</useReleaseProfile>
    <arguments>-P release</arguments>
    <autoVersionSubmodules>true</autoVersionSubmodules>
    <allowTimestampedSnapshots>false</allowTimestampedSnapshots>
    <tagNameFormat>scrappy-@{project.version}</tagNameFormat>
  </configuration>
  <dependencies>
    <dependency>
      <groupId>org.apache.maven.scm</groupId>
      <artifactId>maven-scm-api</artifactId>
      <version>1.8.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.scm</groupId>
      <artifactId>maven-scm-provider-gitexe</artifactId>
      <version>1.8.1</version>
    </dependency>
  </dependencies>
</plugin>

<!-- Ensure to put maven-antrun-plugin at the end of the plugin list
           so that they are run lastly in the same phase. -->
<plugin>
  <artifactId>maven-antrun-plugin</artifactId>
  <executions>
    <!-- Generate the version properties for all artifacts. -->
    <execution>
      <id>write-version-properties</id>
      <phase>initialize</phase>
      <goals>
        <goal>run</goal>
      </goals>
      <configuration>
        <target>
          <taskdef resource="net/sf/antcontrib/antlib.xml" />

          <!-- Get the information about the latest commit -->
          <exec executable="git" outputproperty="gitOutput.shortCommitHash" resultproperty="gitExitCode.shortCommitHash" failonerror="false" failifexecutionfails="false">
            <arg value="log" />
            <arg value="-1" />
            <arg value="--format=format:%h" />
          </exec>
          <if>
            <equals arg2="0" arg1="${gitExitCode.shortCommitHash}" />
            <then>
              <property name="shortCommitHash" value="${gitOutput.shortCommitHash}" />
            </then>
            <else>
              <property name="shortCommitHash" value="0" />
            </else>
          </if>

          <exec executable="git" outputproperty="gitOutput.longCommitHash" resultproperty="gitExitCode.longCommitHash" failonerror="false" failifexecutionfails="false">
            <arg value="log" />
            <arg value="-1" />
            <arg value="--format=format:%H" />
          </exec>
          <if>
            <equals arg2="0" arg1="${gitExitCode.longCommitHash}" />
            <then>
              <property name="longCommitHash" value="${gitOutput.longCommitHash}" />
            </then>
            <else>
              <property name="longCommitHash" value="0000000000000000000000000000000000000000" />
            </else>
          </if>

          <exec executable="git" outputproperty="gitOutput.commitDate" resultproperty="gitExitCode.commitDate" failonerror="false" failifexecutionfails="false">
            <arg value="log" />
            <arg value="-1" />
            <arg value="--format=format:%cd" />
            <arg value="--date=iso" />
          </exec>
          <if>
            <equals arg2="0" arg1="${gitExitCode.commitDate}" />
            <then>
              <property name="commitDate" value="${gitOutput.commitDate}" />
            </then>
            <else>
              <property name="commitDate" value="1970-01-01 00:00:00 +0000" />
            </else>
          </if>

          <exec executable="git" outputproperty="gitOutput.repoStatus" resultproperty="gitExitCode.repoStatus" failonerror="false" failifexecutionfails="false">
            <arg value="status" />
            <arg value="--porcelain" />
          </exec>
          <if>
            <equals arg2="0" arg1="${gitExitCode.repoStatus}" />
            <then>
              <if>
                <equals arg2="" arg1="${gitOutput.repoStatus}" />
                <then>
                  <property name="repoStatus" value="clean" />
                </then>
                <else>
                  <property name="repoStatus" value="dirty" />
                </else>
              </if>
            </then>
            <else>
              <property name="repoStatus" value="unknown" />
            </else>
          </if>

          <!-- Print the obtained commit information. -->
          <echo>Current commit: ${shortCommitHash} on ${commitDate}</echo>

          <!-- Generate the .properties file. -->
          <!--
                <property name="metaInfDir" value="${project.basedir}/src/main/resources/META-INF" />
          -->
          <property name="metaInfDir" value="${project.build.outputDirectory}/META-INF" />
          <property name="versionPropFile" value="${metaInfDir}/${project.groupId}.versions.properties" />
          <mkdir dir="${metaInfDir}" />
          <delete file="${versionPropFile}" quiet="true" />

          <propertyfile file="${versionPropFile}" comment="Generated by netty-parent/pom.xml">
            <entry key="${project.artifactId}.version" value="${project.version}" />
            <entry key="${project.artifactId}.buildDate" type="date" value="now" pattern="yyyy-MM-dd HH:mm:ss Z" />
            <entry key="${project.artifactId}.commitDate" value="${commitDate}" />
            <entry key="${project.artifactId}.shortCommitHash" value="${shortCommitHash}" />
            <entry key="${project.artifactId}.longCommitHash" value="${longCommitHash}" />
            <entry key="${project.artifactId}.repoStatus" value="${repoStatus}" />
          </propertyfile>
        </target>
      </configuration>
    </execution>
  </executions>
  <dependencies>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant-launcher</artifactId>
      <version>1.8.2</version>
    </dependency>
    <dependency>
      <groupId>ant-contrib</groupId>
      <artifactId>ant-contrib</artifactId>
      <version>1.0b3</version>
      <exclusions>
        <exclusion>
          <groupId>ant</groupId>
          <artifactId>ant</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
</plugin>

</plugins>
</build>

</project>